# bankroll_management_vfi

./: .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
notebooks/: 01_finite_dp.ipynb  02_obm_vs_kelly.ipynb
quarto/: _quarto.yml  index.qmd
scripts/: generate_notebooks.py  smoke_test.py
src/brm/: __init__.py  cew.py  finite_dp.py  grid.py  infinite_obm.py  kelly.py  thresholds.py
