[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brm"
version = "0.1.0"
description = "Optimal Bankroll Management — finite-horizon DP and infinite-horizon OBM models"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "statsmodels",
]

[tool.setuptools.packages.find]
where = ["src"]
